tests/fixtures/valid/run_loop.nl
fn main -> i64
    let value i64 = 0
    loop
        value += 1
        if value < 5
            continue
        break
    value
