tests/fixtures/invalid/missing_main.nl
fn helper value i64 -> i64
    value + 1
